<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/page_bg">
    <LinearLayout 
        android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:orientation="vertical" 
	    android:background="@color/page_bg">
	     <com.huizhuang.zxsq.widget.actionbar.CommonActionBar
	        android:id="@+id/common_action_bar"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_alignParentTop="true">
	    </com.huizhuang.zxsq.widget.actionbar.CommonActionBar>
		<ImageView
		    android:id="@+id/iv_bg" 
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:src="@drawable/ic_pay_pos_big"
		    android:contentDescription="@string/app_name"/>
		<TextView 
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/pos_pay_info"
		    android:textSize="@dimen/txt_size_13"
		    android:layout_marginLeft="20dp"
		    android:layout_marginTop="20dp"
		    android:layout_marginBottom="8dp"
		    android:textColor="@color/gray_80"/>
		<ImageView
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:background="@drawable/line"
	        android:contentDescription="@string/app_name"
	        android:scaleType="fitXY"/>
		<LinearLayout 
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:orientation="vertical"
		        android:background="@color/white">
			    <LinearLayout 
			        android:layout_width="match_parent"
			        android:layout_height="40dp"
			        android:orientation="horizontal"
			        android:background="@color/white"
			        android:paddingLeft="20dp">
			        <TextView 
			            android:layout_width="wrap_content"
			            android:layout_height="wrap_content"
			            android:textSize="@dimen/txt_size_11"
			            android:text="@string/waybill_number"
			            android:textColor="@color/gray_4d"
			            android:layout_gravity="center_vertical"
			            android:gravity="center"/>
			        <TextView 
			            android:id="@+id/tv_activity_payinfo_by_pos_order_number"
			            android:layout_width="wrap_content"
			            android:layout_height="wrap_content"
			            android:textSize="@dimen/txt_size_11"
			            android:textColor="@color/gray_4d"
			            android:layout_gravity="center_vertical"
			            android:gravity="center"/>
			    </LinearLayout>
			    <ImageView
			        android:layout_width="match_parent"
			        android:layout_height="wrap_content"
			        android:background="@drawable/line"
			        android:contentDescription="@string/app_name"
			        android:scaleType="fitXY"
			        android:layout_marginLeft="20dp"/>
			    <LinearLayout 
			        android:layout_width="match_parent"
			        android:layout_height="40dp"
			        android:orientation="horizontal"
			        android:background="@color/white"
			        android:paddingLeft="20dp">
			        <TextView 
			            android:layout_width="wrap_content"
			            android:layout_height="wrap_content"
			            android:textSize="@dimen/txt_size_11"
			            android:text="@string/pay_money"
			            android:textColor="@color/gray_4d"
			            android:layout_gravity="center_vertical"
			            android:gravity="center"/>
			        <TextView 
			            android:id="@+id/tv_activity_payinfo_by_pos_pay_money"
			            android:layout_width="wrap_content"
			            android:layout_height="wrap_content"
			            android:textSize="@dimen/txt_size_11"
			            android:textColor="@color/orange_light"
			            android:layout_gravity="center_vertical"
			            android:gravity="center"/>
			    </LinearLayout>
			    <ImageView
			        android:layout_width="match_parent"
			        android:layout_height="wrap_content"
			        android:background="@drawable/line"
			        android:contentDescription="@string/app_name"
			        android:scaleType="fitXY"/>
			</LinearLayout>
			<TextView 
			    android:id="@+id/tv_tips"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:textSize="@dimen/txt_size_11"
	            android:text="@string/txt_pay_tip2"
	            android:textColor="@color/gray_80"
	            android:layout_marginLeft="20dp"
	            android:layout_marginTop="8dp"/>
			<LinearLayout 
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content"
			    android:gravity="center_horizontal"
			    android:orientation="vertical">
			    <ImageView
			        android:id="@+id/iv_code"
			        android:layout_width="110dp"
			        android:layout_height="110dp"
			        android:background="@drawable/ic_pay_by_pos"
			        android:contentDescription="@string/app_name"
			        android:scaleType="centerCrop"
			        android:layout_marginTop="30dp"
			        android:layout_marginBottom="10dp"/>
			    <TextView 
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:textSize="@dimen/txt_size_13"
		            android:text="@string/pos_pay_wait"
		            android:textColor="@color/gray_80"
		            android:gravity="center_horizontal"/>
			</LinearLayout>
		</LinearLayout>
		    <Button
		       android:id="@+id/btn_pay" 
		       android:layout_width="match_parent"
		       android:layout_height="51dp"
		       android:text="@string/txt_confirmation_by_pos"
		       android:background="#fe6d6d"
		       android:textSize="18sp"
		       android:textColor="@color/white"
		       android:layout_alignParentBottom="true"
		       android:layout_marginTop="50dp"/>  		
</RelativeLayout>
