<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/page_bg">
	<com.huizhuang.zxsq.widget.actionbar.CommonActionBar
        android:id="@+id/activity_pay_common_action_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </com.huizhuang.zxsq.widget.actionbar.CommonActionBar>
	<LinearLayout 
	    android:id="@+id/ll_activity_pay_info"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical"
	    android:layout_below="@id/activity_pay_common_action_bar">
	    <TextView 
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/pay_info"
			android:textSize="@dimen/txt_size_13"
			android:textColor="@color/gray_b1"
			android:layout_marginTop="20dp"
			android:layout_marginLeft="20dp"
			android:layout_marginBottom="8dp"/>
	    <ImageView
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:background="@drawable/line"
	        android:contentDescription="@string/app_name"
	        android:scaleType="fitXY"/>
	    <LinearLayout 
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="vertical"
	        android:background="@color/white">
		    <LinearLayout 
		        android:layout_width="match_parent"
		        android:layout_height="40dp"
		        android:orientation="horizontal"
		        android:background="@color/white"
		        android:paddingLeft="20dp">
		        <TextView 
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:textSize="@dimen/txt_size_11"
		            android:text="@string/waybill_number"
		            android:textColor="@color/gray_4d"
		            android:layout_gravity="center_vertical"
		            android:gravity="center"/>
		        <TextView 
		            android:id="@+id/tv_activity_pay_order_number"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:textSize="@dimen/txt_size_11"
		            android:textColor="@color/gray_4d"
		            android:layout_gravity="center_vertical"
		            android:gravity="center"/>
		    </LinearLayout>
		    <ImageView
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:background="@drawable/line"
		        android:contentDescription="@string/app_name"
		        android:scaleType="fitXY"
		        android:layout_marginLeft="20dp"/>
		    <RelativeLayout
		        android:id="@+id/rl_amount_payable"
		        android:layout_width="match_parent"
		        android:layout_height="40dp"
		        android:background="@color/white"
		        android:paddingLeft="20dp"
		        android:visibility="gone">
		        <TextView
		            android:id="@+id/tv_03" 
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:textSize="@dimen/txt_size_11"
		            android:text="@string/pay_amount_payable"
		            android:textColor="@color/gray_4d"
		            android:layout_gravity="center_vertical"
		            android:gravity="center"
		            android:layout_centerVertical="true"/>
		        <TextView 
		            android:id="@+id/tv_activity_amount_payable"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:textSize="@dimen/txt_size_11"
		            android:textColor="@color/orange_light"
		            android:layout_gravity="center_vertical"
		            android:gravity="center"
		            android:layout_toRightOf="@id/tv_03"
		            android:layout_centerVertical="true"/>
		        <CheckBox
		            android:id="@+id/cb_activity_use_coupon"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:background="@drawable/bg_cb_use_coupon_selector"
		            android:layout_alignParentRight="true"
		            android:layout_centerVertical="true"
		            android:button="@null"
		            android:checked="true"
		            android:layout_marginRight="24dp"/>
		        <TextView 
		            android:id="@+id/tv_activity_coupon_money"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:textSize="@dimen/txt_size_15"
		            android:textColor="@color/orange_light"
		            android:layout_gravity="center_vertical"
		            android:gravity="center"
		            android:layout_toLeftOf="@id/cb_activity_use_coupon"
		            android:layout_centerVertical="true"
		            android:layout_marginRight="11dp"/>
		        <ImageView 
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:src="@drawable/ic_pay_coupon"
		            android:layout_toLeftOf="@id/tv_activity_coupon_money"
		            android:layout_centerVertical="true"
		            android:layout_marginRight="11dp"/>
		    </RelativeLayout>
		    <ImageView
		        android:id="@+id/iv_amount_payable_line"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:background="@drawable/line"
		        android:contentDescription="@string/app_name"
		        android:scaleType="fitXY"
		        android:layout_marginLeft="20dp"
		        android:visibility="gone"/>
		    <LinearLayout 
		        android:layout_width="match_parent"
		        android:layout_height="40dp"
		        android:orientation="horizontal"
		        android:background="@color/white"
		        android:paddingLeft="20dp">
		        <TextView 
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:textSize="@dimen/txt_size_11"
		            android:text="@string/pay_money"
		            android:textColor="@color/gray_4d"
		            android:layout_gravity="center_vertical"
		            android:gravity="center"/>
		        <TextView 
		            android:id="@+id/tv_activity_pay_pay_money"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:textSize="@dimen/txt_size_11"
		            android:textColor="@color/orange_light"
		            android:layout_gravity="center_vertical"
		            android:gravity="center"/>
		    </LinearLayout>
		    <ImageView
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:background="@drawable/line"
		        android:contentDescription="@string/app_name"
		        android:scaleType="fitXY"/>
		</LinearLayout>
		<TextView 
	           android:layout_width="wrap_content"
	           android:layout_height="wrap_content"
	           android:textSize="@dimen/txt_size_13"
	           android:text="@string/pay_method"
	           android:textColor="@color/gray_b1"
	           android:gravity="center"
	           android:layout_marginTop="20dp"
			   android:layout_marginLeft="20dp"
			   android:layout_marginBottom="8dp"/>
		<ImageView
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:background="@drawable/line"
		        android:contentDescription="@string/app_name"
		        android:scaleType="fitXY"/>
		</LinearLayout>
		<ScrollView 
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:background="@color/white"
		    android:layout_below="@id/ll_activity_pay_info">
		    <LinearLayout 
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:orientation="vertical">
			    <RelativeLayout 
			        android:layout_width="match_parent"
			        android:layout_height="69dp">
			        <ImageView
			            android:id="@+id/iv_activity_pay_zhifubao"
			            android:layout_width="wrap_content"
			            android:layout_height="wrap_content"
			            android:src="@drawable/ic_pay_zhifubao"
			            android:layout_marginLeft="20dp"
			            android:contentDescription="@string/app_name"
			            android:layout_centerVertical="true"/>
			        <LinearLayout
			            android:layout_width="wrap_content"
			            android:layout_height="wrap_content"
			            android:orientation="vertical"
			            android:layout_marginLeft="20dp"
			            android:layout_toRightOf="@id/iv_activity_pay_zhifubao"
			            android:layout_centerVertical="true">
				        <TextView 
				            android:layout_width="wrap_content"
				            android:layout_height="wrap_content"
				            android:text="@string/pay_zhifubao"
				            android:textSize="@dimen/txt_size_14"
				            android:textColor="@color/gray_4d"/>
				        <TextView 
				            android:layout_width="wrap_content"
				            android:layout_height="wrap_content"
				            android:text="@string/pay_recommend_zhifubao"
				            android:textSize="@dimen/txt_size_12"
				            android:textColor="@color/gray_80"
				            android:layout_marginTop="8dp"/>
			        </LinearLayout>
			        <CheckBox
			            android:id="@+id/cb_activity_pay_zhifubao"
			            android:layout_width="wrap_content"
			            android:layout_height="wrap_content"
			            android:background="@drawable/bg_cb_selector"
			            android:layout_alignParentRight="true"
			            android:layout_marginRight="20dp"
			            android:layout_centerVertical="true"
			            android:button="@null"
			            android:checked="true"/>
			        <ImageView
				        android:layout_width="match_parent"
				        android:layout_height="wrap_content"
				        android:background="@drawable/line"
				        android:contentDescription="@string/app_name"
				        android:scaleType="fitXY"
				        android:layout_alignParentBottom="true"
				        android:layout_toRightOf="@id/iv_activity_pay_zhifubao"
				        android:layout_marginLeft="20dp"/>
			    </RelativeLayout>
			    
			     <RelativeLayout 
			        android:layout_width="match_parent"
			        android:layout_height="69dp">
			        <ImageView
			            android:id="@+id/iv_activity_pay_weixin"
			            android:layout_width="wrap_content"
			            android:layout_height="wrap_content"
			            android:src="@drawable/ic_pay_weixin"
			            android:layout_marginLeft="20dp"
			            android:contentDescription="@string/app_name"
			            android:layout_centerVertical="true"/>
			        <LinearLayout
			            android:layout_width="wrap_content"
			            android:layout_height="wrap_content"
			            android:orientation="vertical"
			            android:layout_marginLeft="20dp"
			            android:layout_toRightOf="@id/iv_activity_pay_weixin"
			            android:layout_centerVertical="true">
				        <TextView 
				            android:layout_width="wrap_content"
				            android:layout_height="wrap_content"
				            android:text="@string/pay_weixin"
				            android:textSize="@dimen/txt_size_14"
				            android:textColor="@color/gray_4d"/>
				        <TextView 
				            android:layout_width="wrap_content"
				            android:layout_height="wrap_content"
				            android:text="@string/pay_recommend_weixin"
				            android:textSize="@dimen/txt_size_12"
				            android:textColor="@color/gray_80"
				            android:layout_marginTop="8dp"/>
			        </LinearLayout>
			        <CheckBox
			            android:id="@+id/cb_activity_pay_weixin"
			            android:layout_width="wrap_content"
			            android:layout_height="wrap_content"
			            android:background="@drawable/bg_cb_selector"
			            android:layout_alignParentRight="true"
			            android:layout_marginRight="20dp"
			            android:layout_centerVertical="true"
			            android:button="@null"/>
			         <ImageView
				        android:layout_width="match_parent"
				        android:layout_height="wrap_content"
				        android:background="@drawable/line"
				        android:contentDescription="@string/app_name"
				        android:scaleType="fitXY"
				        android:layout_alignParentBottom="true"
				        android:layout_toRightOf="@id/iv_activity_pay_weixin"
				        android:layout_marginLeft="20dp"/>
			    </RelativeLayout>
			     <RelativeLayout 
			        android:layout_width="match_parent"
			        android:layout_height="69dp">
			        <ImageView
			            android:id="@+id/iv_activity_pay_online"
			            android:layout_width="wrap_content"
			            android:layout_height="wrap_content"
			            android:src="@drawable/ic_pay_online"
			            android:layout_marginLeft="20dp"
			            android:contentDescription="@string/app_name"
			            android:layout_centerVertical="true"/>
			        <LinearLayout
			            android:layout_width="wrap_content"
			            android:layout_height="wrap_content"
			            android:orientation="vertical"
			            android:layout_marginLeft="20dp"
			            android:layout_toRightOf="@id/iv_activity_pay_online"
			            android:layout_centerVertical="true">
				        <TextView 
				            android:layout_width="wrap_content"
				            android:layout_height="wrap_content"
				            android:text="@string/pay_online"
				            android:textSize="@dimen/txt_size_14"
				            android:textColor="@color/gray_4d"/>
				        <TextView 
				            android:layout_width="wrap_content"
				            android:layout_height="wrap_content"
				            android:text="@string/pay_recommend_online"
				            android:textSize="@dimen/txt_size_12"
				            android:textColor="@color/gray_80"
				            android:layout_marginTop="8dp"/>
			        </LinearLayout>
			        <CheckBox
			            android:id="@+id/cb_activity_pay_online"
			            android:layout_width="wrap_content"
			            android:layout_height="wrap_content"
			            android:background="@drawable/bg_cb_selector"
			            android:layout_alignParentRight="true"
			            android:layout_marginRight="20dp"
			            android:layout_centerVertical="true"
			            android:button="@null"/>
			         <ImageView
				        android:layout_width="match_parent"
				        android:layout_height="wrap_content"
				        android:background="@drawable/line"
				        android:contentDescription="@string/app_name"
				        android:scaleType="fitXY"
				        android:layout_alignParentBottom="true"
				        android:layout_toRightOf="@id/iv_activity_pay_online"
				        android:layout_marginLeft="20dp"/>
			    </RelativeLayout>
			     <RelativeLayout 
			        android:layout_width="match_parent"
			        android:layout_height="69dp">
			        <ImageView
			            android:id="@+id/iv_activity_pay_pos"
			            android:layout_width="wrap_content"
			            android:layout_height="wrap_content"
			            android:src="@drawable/ic_pay_pos"
			            android:layout_marginLeft="20dp"
			            android:contentDescription="@string/app_name"
			            android:layout_centerVertical="true"/>
			        <LinearLayout
			            android:layout_width="wrap_content"
			            android:layout_height="wrap_content"
			            android:orientation="vertical"
			            android:layout_marginLeft="20dp"
			            android:layout_toRightOf="@id/iv_activity_pay_pos"
			            android:layout_centerVertical="true">
				        <TextView 
				            android:layout_width="wrap_content"
				            android:layout_height="wrap_content"
				            android:text="@string/pay_pos"
				            android:textSize="@dimen/txt_size_14"
				            android:textColor="@color/gray_4d"/>
				        <TextView 
				            android:layout_width="wrap_content"
				            android:layout_height="wrap_content"
				            android:text="@string/pay_recommend_pos"
				            android:textSize="@dimen/txt_size_12"
				            android:textColor="@color/gray_80"
				            android:layout_marginTop="8dp"/>
			        </LinearLayout>
			        <CheckBox
			            android:id="@+id/cb_activity_pay_pos"
			            android:layout_width="wrap_content"
			            android:layout_height="wrap_content"
			            android:background="@drawable/bg_cb_selector"
			            android:layout_alignParentRight="true"
			            android:layout_marginRight="20dp"
			            android:layout_centerVertical="true"
			            android:button="@null"/>
			        <ImageView
				        android:layout_width="match_parent"
				        android:layout_height="wrap_content"
				        android:background="@drawable/line"
				        android:contentDescription="@string/app_name"
				        android:scaleType="fitXY"
				        android:layout_alignParentBottom="true"/>
			    </RelativeLayout>
		    </LinearLayout>
		</ScrollView>
	<Button 
	    android:id="@+id/btn_activity_pay_pay"
	    android:layout_width="match_parent"
	    android:layout_height="57dp"
	    android:layout_alignParentBottom="true"
	    android:background="@drawable/bg_foreman_details_construction_btn"
	    android:text="@string/pay_immediately_pay"
	    android:textSize="@dimen/txt_size_18"
	    android:textColor="@color/white"/>
</RelativeLayout>
